Salesforce/force-app/main/default/objects/RTIIP_Rate_Setting__mdt/RTIIP_Rate_Setting__mdt.object-meta.xml
<CustomObject>
    <label>RTIIP Rate Setting</label>
    <pluralLabel>RTIIP Rate Settings</pluralLabel>
</CustomObject>